<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vegeback"
    tools:context=".vegetable">

    <ImageButton
        android:id="@+id/btnchopseuy"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/chopseuy"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/chopseuy" />

    <ImageButton
        android:id="@+id/btnpakbet"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:background="@drawable/pakbet"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/pakbet"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/pakbet" />

    <ImageButton
        android:id="@+id/btnmongo"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:background="@drawable/mongooo"
        android:contentDescription="@string/mongo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747"
        app:srcCompat="@drawable/mongo" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnchopseuy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/chopsueytxt" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="229dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnpakbet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:srcCompat="@drawable/pakbettxt" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnmongo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722"
        app:srcCompat="@drawable/mongo" />

</androidx.constraintlayout.widget.ConstraintLayout>