<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seafoodback"
    tools:context=".seafoods">

    <ImageButton
        android:id="@+id/btnpaksiw"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/paksiw"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/paksiw" />

    <ImageButton
        android:id="@+id/btntahong"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/tahong"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/tahong" />

    <ImageButton
        android:id="@+id/btnhipon"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/hipon"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        app:srcCompat="@drawable/sipon" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnpaksiw"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/paksiwtxt" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnhipon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        app:srcCompat="@drawable/hipontxt" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btntahong"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        app:srcCompat="@drawable/tahongtxt" />
</androidx.constraintlayout.widget.ConstraintLayout>