<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meatback"
    tools:context=".meats">

    <ImageButton
        android:id="@+id/btnadobo"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/adobo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/adobo" />

    <ImageButton
        android:id="@+id/btnsinigang"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/sini"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/sinigang" />

    <ImageButton
        android:id="@+id/btnbeefsteak"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:contentDescription="@string/beefsteak"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        app:srcCompat="@drawable/beefstaek" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="179dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnadobo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/adobotxt" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="185dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnsinigang"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/sinigangtxt" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="178dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnbeefsteak"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        app:srcCompat="@drawable/steak" />

</androidx.constraintlayout.widget.ConstraintLayout>